# Anubis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.bat
src/: entry_point.cpp
src/cheat/features/: config.hpp
src/cheat/features/movement/: movement.cpp  movement.hpp
src/cheat/features/visuals/: visuals.cpp  visuals.hpp
src/cheat/features/visuals/esp/: esp.cpp  esp.hpp
src/cheat/features/visuals/visuals/: esp.cpp
src/cheat/gui/: gui.hpp
src/cheat/gui/watermark/: watermark.cpp  watermark.hpp
src/cheat/hooks/: hooks.hpp
src/cheat/hooks/lists/: createmove.cpp  fs_notify.cpp  paint.cpp  present.cpp
src/factory/: factory.cpp  factory.hpp
src/sdk/: link.cpp  link.hpp
src/sdk/hack/: ctx.hpp  memory.hpp  typedefs.hpp
src/sdk/shared/: memory.hpp  typedefs.hpp
src/sdk/shared/console/: console.cpp  console.hpp
src/sdk/shared/drawsystem/: drawsystem.cpp  drawsystem.hpp  imconfig.hpp
src/sdk/valve/: bitbuf.hpp  client_entity.hpp  client_entity_list.hpp  client_mode.hpp  client_networkable.hpp  client_renderable.hpp  client_thinkable.hpp  client_unknown.hpp  constants.hpp  datatables.hpp  engine_client.cpp  engine_client.hpp  engine_vgui.cpp  engine_vgui.hpp  frame_stage.hpp  hl_client.cpp  hl_client.hpp  mathlib.hpp  render_view.cpp  render_view.hpp  surface.cpp  surface.hpp  user_cmd.hpp  view_setup.hpp
src/sdk/valve/netvars/: hash.hpp  netvars.cpp  netvars.hpp
src/sdk/valve/tf/: c_base_entity.cpp  c_base_entity.hpp  c_entity.cpp  c_entity.hpp  c_tf_player.hpp  tf_constants.hpp
